# dataguard

./: .coverage  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
docs/: api.md  getting_started.md  how-to-create_checks.md  index.md
getting_started/: index.html
how-to-create_checks/: index.html
notebooks/: checks.py  getting_started.py
scripts/: docs_build.sh  docs_serve.sh  format.sh  lint.sh  pre_commit.sh  test.sh
search/: search_index.json
src/dataguard/: __init__.py
src/dataguard/config/: config_reader.py
src/dataguard/core/check/: check_cmd.py  schemas.py
src/dataguard/core/models/: schemas.py
src/dataguard/core/utils/: enums.py  mappers.py
src/dataguard/dataframe/: df_reader.py
src/dataguard/error_report/: error_collector.py  error_schemas.py  handlers.py  utils.py
src/dataguard/validator/: validator.py
src/peh_validation_library/: __init__.py
src/peh_validation_library/config/: config_reader.py
src/peh_validation_library/error_report/: error_collector.py  error_schemas.py  utils.py
src/peh_validation_library/validator/: validator.py
tests/tests_config/: test_config.py
tests/tests_core/tests_check/: test_check_cmd.py  test_schemas.py
tests/tests_core/tests_models/: test_check_schema.py  test_column_schema.py  test_df_schema.py
tests/tests_dataframe/: test_df_reader.py
tests/tests_error_report/: test_error_collector.py  test_handlers.py
tests/tests_validator/: test_validator.py
(+2 files in other folders)
