[project]
name = "dataguard"
version = "0.3.0"
description = "A framework-agnostic data validation library for ensuring data quality and integrity"
readme = "README.md"
authors = [
    { name = "Caio Mescouto Terra de Souza", email = "caio.mescouto@vito.be" }
]
requires-python = ">=3.10"
dependencies = [
    "pandera[polars]>=0.23.1",
    "polars>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.131.14",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]
docs = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]

[tool.ruff]
line-length = 79
src = ["src/dataguard"]
extend-exclude = ["tests", "scripts", "notebooks", "data"]
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "PL", "PT", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["dataguard"]
force-sort-within-sections = true

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["-p no:warnings"]
testpaths = ["tests/"]
